# fastapi-gh-aw-demo

./: CONTRIBUTING.md  LICENSE  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: update-docs.lock.yml  update-docs.md
app/: main.py
app/api/: routes.py
app/core/: config.py
docs/: README.md  api-reference.md  automation.md  configuration.md  development.md  explanation.md  how-to-guides.md  how-to.md  reference.md  tutorial.md
docs/explanation/: README.md  architecture.md  design-decisions.md  workflow.md
docs/how-to/: README.md  add-endpoint.md  configure-env.md  run-tests.md
docs/reference/: README.md  configuration.md  endpoints.md  project-structure.md
tests/: test_routes.py
